--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "timegrid-backend",
+  "name": "@timegrid/backend",
   "version": "1.0.0",
   "description": "TimeGrid task management backend",
   "main": "dist/app.js",
+  "private": true,
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
