--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE_URL=postgresql://user:password@localhost:5432/timegrid
+DATABASE_URL=postgresql://user:password@localhost:5432/timeblocker
 JWT_SECRET=your-secret-key-here
 VAPID_PUBLIC_KEY=your-vapid-public-key
 VAPID_PRIVATE_KEY=your-vapid-private-key
