--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/web-push": "^3.6.3",
+    "@types/node-cron": "^3.0.6",
+    "@types/uuid": "^9.0.7",
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
