--- a/backend/package.json
+++ b/backend/package.json
@@ -8,37 +8,40 @@
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-    "migration:create": "mikro-orm migration:create",
-    "migration:up": "mikro-orm migration:up",
-    "migration:down": "mikro-orm migration:down"
+    "migration:create": "MIKRO_ORM_CLI=./src/config/mikro-orm.config.ts mikro-orm migration:create",
+    "migration:up": "MIKRO_ORM_CLI=./src/config/mikro-orm.config.ts mikro-orm migration:up",
+    "migration:down": "MIKRO_ORM_CLI=./src/config/mikro-orm.config.ts mikro-orm migration:down",
+    "seed": "MIKRO_ORM_CLI=./src/config/mikro-orm.config.ts mikro-orm seeder:run",
+    "seed:demo": "MIKRO_ORM_CLI=./src/config/mikro-orm.config.ts mikro-orm seeder:run --class=DemoSeeder"
   },
   "dependencies": {
-    "@mikro-orm/core": "^5.9.0",
-    "@mikro-orm/postgresql": "^5.9.0",
-    "@mikro-orm/migrations": "^5.9.0",
     "@mikro-orm/cli": "^5.9.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
+    "@mikro-orm/core": "^5.9.0",
+    "@mikro-orm/migrations": "^5.9.0",
+    "@mikro-orm/postgresql": "^5.9.0",
+    "@mikro-orm/seeder": "^5.9.8",
     "bcryptjs": "^2.4.3",
-    "express-validator": "^7.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "web-push": "^3.6.6",
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
-    "@types/web-push": "^3.6.3",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.6",
     "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
+    "@types/web-push": "^3.6.3",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
