--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,7 @@
     "@mikro-orm/seeder": "^5.9.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
