--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,7 @@
     "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^8.5.2",
     "axios": "^1.6.2",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.13",
     "idb": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
