--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^11.0.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
