--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,17 @@
-VITE_API_URL=http://localhost:3000
+# API Configuration
+# Leave blank for automatic IP detection, or set manually for specific environments
+
+# For automatic detection based on current hostname (recommended for development)
+# VITE_API_URL=
+
+# For local development only
+# VITE_API_URL=http://localhost:3000/api
+
+# For specific IP address (when automatic detection doesn't work)
+# VITE_API_URL=http://192.168.1.100:3000/api
+
+# For production
+# VITE_API_URL=https://api.yourdomain.com/api
+
+# Push notification public key
 VITE_VAPID_PUBLIC_KEY=your-vapid-public-key
